feat: creating a route responsible for bringing all films of a given genre
